src/spacing.css
@define-mixin sizes {
	display: block;
	width: 0;

	&.size-2 {
		height: 2px;
	}

	&.size-4 {
		height: 4px;
	}

	&.size-8 {
		height: 8px;
	}

	&.size-12 {
		height: 12px;
	}

	&.size-16 {
		height: 16px;
	}

	&.size-24 {
		height: 24px;
	}

	&.size-32 {
		height: 32px;
	}

	&.size-48 {
		height: 48px;
	}

	&.size-56 {
		height: 56px;
	}

	&.size-64 {
		height: 64px;
	}

	&.size-96 {
		height: 96px;
	}

	&.size-128 {
		height: 128px;
	}

	&.size-160 {
		height: 160px;
	}

	&.none {
		height: 0;
	}

	&.horizontal {
		display: inline-block;
		height: 0;

		&.size-2 {
			width: 2px;
		}

		&.size-4 {
			width: 4px;
		}

		&.size-8 {
			width: 8px;
		}

		&.size-12 {
			width: 12px;
		}

		&.size-16 {
			width: 16px;
		}

		&.size-24 {
			width: 24px;
		}

		&.size-32 {
			width: 32px;
		}

		&.size-48 {
			width: 48px;
		}

		&.size-56 {
			width: 56px;
		}

		&.size-64 {
			width: 64px;
		}

		&.size-96 {
			width: 96px;
		}

		&.size-128 {
			width: 128px;
		}

		&.size-160 {
			width: 160px;
		}

		&.none {
			width: 0;
		}
	}
}

.space {
	@mixin sizes;
}

@media (--screen-xs) {
	.xs-hide {
		display: none;
	}

	.xs-show {
		display: inherit;
	}
}

@media (--screen-sm) {
	.sm-hide {
		display: none;
	}

	.sm-show {
		display: inherit;
	}
}

@media (--screen-md) {
	.md-hide {
		display: none;
	}

	.md-show {
		display: inherit;
	}
}

@media (--screen-lg) {
	.lg-hide {
		display: none;
	}

	.lg-show {
		display: inherit;
	}
}

@media (--screen-xl) {
	.xl-hide {
		display: none;
	}

	.xl-show {
		display: inherit;
	}
}

@media (--screen-xxl) {
	.xxl-hide {
		display: none;
	}

	.xxl-show {
		display: inherit;
	}
}

@media (--screen-xxxl) {
	.xxxl-hide {
		display: none;
	}

	.xxxl-show {
		display: inherit;
	}
}

